--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-09</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <header>
+      <section class="container">
+        <nav>
+          <ul class="nav-list">
+            <li class="task"><a href="./1-gallery.html">Gallery</a></li>
+            <li class="task"><a href="./2-form.html">Form</a></li>
+          </ul>
+        </nav>
+      </section>
+    </header>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
